# beatrice

./: .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
beatrice/backend/: Dockerfile  pyproject.toml  start.sh
beatrice/backend/app/: init.py  main.py  prestart.py
beatrice/backend/app/api/: dependencies.py
beatrice/backend/app/api/v1/: anime.py  api.py  book.py  login.py  manga.py  movie.py  patrons.py
beatrice/backend/app/core/: config.py  database.py  security.py
beatrice/backend/app/crud/: anime.py  base.py  book.py  manga.py  movie.py  patron.py
beatrice/backend/app/models/: __init__.py  anime.py  book.py  manga.py  mixins.py  movie.py  patron.py  response.py  token.py  validators.py
beatrice/backend/migrations/: env.py
beatrice/backend/migrations/versions/: b54739582e4a_init.py
beatrice/frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
beatrice/frontend/src/: App.vue
beatrice/frontend/src/assets/style/: base.css
beatrice/frontend/src/components/: Center.vue  Icon.vue  Sidebar.vue  SidebarMenu.vue  Stack.vue  StackSplit.vue
beatrice/frontend/src/components/icons/: IconAnime.vue  IconBooks.vue  IconGames.vue  IconManga.vue  IconMoon.vue  IconMovies.vue  IconMusic.vue  IconSun.vue  IconTVSeries.vue
beatrice/frontend/src/router/: index.ts
